# as_aac_codec_fdk

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/media/ushow/aac_codec_fdk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h
app/src/main/cpp/decoder/: AACDecoder.cpp  AACDecoder.h
app/src/main/cpp/encoder/: AACEncoder.cpp  AACEncoder.h  put_bits.h
app/src/main/java/media/ushow/aac_codec_fdk/: AACDecoder.java  AACEncoder.java  MainActivity.java
app/src/main/jni/: AACDecoderJNI.cpp  AACEncoderJNI.cpp  media_ushow_aac_codec_fdk_AACDecoder.h  media_ushow_aac_codec_fdk_AACEncoder.h  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/media/ushow/aac_codec_fdk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
